examples/datalog/18_advanced_patterns/126_ntile_sim.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_ntile
Knowledge graph 'test_ntile' created.
Switched to knowledge graph: test_ntile
> .kg use test_ntile
Switched to knowledge graph: test_ntile
> +scores[(1, 95), (2, 85), (3, 75), (4, 65)].
Inserted 4 fact(s) into 'scores'.
> +quartile(Id, Score, <COUNT:OtherId>) :- scores(Id, Score), scores(OtherId, OtherScore), OtherScore >= Score.
Script error: Parse error: Invalid term: '<COUNT:OtherId>'
